--- a/src/pages/lobby/Lobby.css
+++ b/src/pages/lobby/Lobby.css
@@ -8,30 +8,140 @@
 }
 
 .lobby-inner-container {
-  min-width: 300px;
-  width: 80%;
+  width: 100%;
   background: black;
   padding: 1rem;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin-top: 7rem;
+  height: 80vh;
 }
 
-.lobby-inner-container h1 {
-  font-size: 2rem;
-  color: white;
-  margin-bottom: 1rem;
+.participants {
+  flex: 2;
+  background: white;
+  height: 100%;
+  border-right: 3px solid black;
 }
 
-.lobby-btn {
+.participants-list {
+  height: 100%;
+  overflow: auto;
+}
+
+.participants-item {
   padding: 1rem;
-  border: 1px solid blue;
-  background: transparent;
-  color: white;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-bottom: 1px solid black;
   cursor: pointer;
 }
 
-.lobby-btn:hover {
-  background-color: blue;
+.participants-item:hover {
+  background: darkblue;
+  color: white;
+}
+
+.participants-item-avatar {
+  margin-right: 1rem;
+}
+
+.participants-item-avatar > img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.participants-item-name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.chat {
+  flex: 8;
+  background-color: white;
+  height: 100%;
+}
+
+.bottom-panel {
+  height: 9.7vh;
+  width: 100%;
+  background-color: black;
+  display: flex;
+  align-items: flex-end;
+  padding: 0 1rem;
+  flex-direction: column;
+}
+
+.bottom-panel > .input-wrapper > input {
+  padding: 0.4rem;
+  height: 100%;
+}
+
+.input-wrapper {
+  display: flex;
+  width: 80%;
+  margin-bottom: 0.3rem;
+  justify-content: flex-end;
+}
+
+.message-box {
+  flex: 8;
+  margin-bottom: 0.5rem;
+  margin-right: 0.5rem;
+  border-radius: 5px;
+  border: 1px solid transparent;
+}
+
+.send-btn {
+  flex: 2;
+  border-radius: 5px;
+  border: 1px solid transparent;
+  color: white;
+  background-color: darkblue;
+  cursor: pointer;
+}
+
+.send-btn:hover,
+.go-btn:hover {
+  background-color: green;
+}
+
+.channel {
+  width: 30% !important;
+  border-radius: 5px;
+  margin-right: 0.5rem;
+}
+
+.go-btn {
+  border-radius: 5px;
+  border: 1px solid transparent;
+  color: white;
+  background-color: darkblue;
+  cursor: pointer;
+  font-size: 1rem !important;
+  padding: 0.5rem;
+}
+
+.admin-img {
+  width: 2rem;
+  height: 2rem;
+  margin-left: 1rem;
+}
+
+.tooltip {
+  display: none;
+  position: absolute;
+  top: -15px;
+  right: -62px;
+  background-color: red;
+  padding: 0.5rem;
+  border-radius: 5px;
+  color: white;
+}
+
+.admin-img:hover + .tooltip {
+  display: block;
 }
