--- a/src/pages/lobby/Lobby.css
+++ b/src/pages/lobby/Lobby.css
@@ -12,8 +12,8 @@
   background: black;
   padding: 1rem;
   display: flex;
-  margin-top: 7rem;
-  height: 80vh;
+  margin-top: 5rem;
+  height: calc(100vh - 15rem);
 }
 
 .participants {
@@ -46,7 +46,7 @@
   margin-right: 1rem;
 }
 
-.participants-item-avatar > img {
+.participants-item-avatar>img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -66,7 +66,7 @@
 }
 
 .bottom-panel {
-  height: 9.7vh;
+  height: 10rem;
   width: 100%;
   background-color: black;
   display: flex;
@@ -75,7 +75,7 @@
   flex-direction: column;
 }
 
-.bottom-panel > .input-wrapper > input {
+.bottom-panel>.input-wrapper>input {
   padding: 0.4rem;
   height: 100%;
 }
@@ -142,6 +142,6 @@
   color: white;
 }
 
-.admin-img:hover + .tooltip {
+.admin-img:hover+.tooltip {
   display: block;
 }
