updated styles and added pages

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -15,7 +15,7 @@
   min-width: 150px;
 }
 
-.logo-wrapper>img {
+.logo-wrapper > img {
   width: 100%;
   height: 100%;
 }
@@ -41,11 +41,21 @@
   font-size: 1.5rem;
 }
 
+@media screen and (max-width: 840px) {
+  .menu-item:nth-child(3) {
+    margin-right: 0;
+  }
+
+  .profile-shift {
+    left: -200% !important;
+  }
+}
+
 .menu-item:hover {
   color: red;
 }
 
-.menu-item:hover>.submenu-list {
+.menu-item:hover > .submenu-list {
   display: flex;
   position: absolute;
   background: darkblue;
@@ -65,7 +75,7 @@
   cursor: default;
 }
 
-.notif>.submenu-item:hover {
+.notif > .submenu-item:hover {
   background: darkblue;
 }
 
@@ -80,7 +90,7 @@
   height: 100%;
 }
 
-.profile-wrapper>img {
+.profile-wrapper > img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -125,7 +135,7 @@
   height: 80px;
 }
 
-.player-icon>img {
+.player-icon > img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -139,7 +149,7 @@
   min-width: 15rem;
 }
 
-.player-message>p {
+.player-message > p {
   width: 100%;
   font-size: 1rem;
   margin-bottom: 1rem;
