--- a/src/pages/lobby/Lobby.css
+++ b/src/pages/lobby/Lobby.css
@@ -1,5 +1,5 @@
 .lobby-container {
-  background: grey;
+  background: black;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -14,6 +14,12 @@
   display: flex;
   margin-top: 5rem;
   height: calc(100vh - 15rem);
+}
+
+@media screen and (max-width: 840px) {
+  .lobby-inner-container {
+    margin-top: 0;
+  }
 }
 
 .participants {
@@ -35,6 +41,7 @@
   align-items: center;
   border-bottom: 1px solid black;
   cursor: pointer;
+  position: relative;
 }
 
 .participants-item:hover {
@@ -44,9 +51,11 @@
 
 .participants-item-avatar {
   margin-right: 1rem;
+  width: 50px;
+  height: 50px;
 }
 
-.participants-item-avatar>img {
+.participants-item-avatar > img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -59,10 +68,84 @@
   position: relative;
 }
 
+.participants-dropdown {
+  list-style: none;
+  position: absolute;
+  background-color: red;
+  color: white;
+  right: 0;
+  top: 2rem;
+  z-index: 2;
+}
+
+.participants-dropdown-item {
+  padding: 1rem;
+  border-bottom: 1px solid darkblue;
+}
+
+.participants-dropdown-item:hover {
+  background-color: green;
+}
+
 .chat {
   flex: 8;
   background-color: white;
   height: 100%;
+}
+
+.switch-btn {
+  background-color: black;
+  display: none;
+  margin-top: 5rem;
+  width: 100%;
+  padding-left: 1rem;
+}
+
+.switch-btn > button {
+  padding: 1rem;
+  background: darkblue;
+  color: white;
+  border: 1px solid transparent;
+  cursor: pointer;
+}
+
+.switch-btn > button:hover {
+  background-color: green;
+}
+
+@media screen and (max-width: 840px) {
+  .switch-btn {
+    display: block;
+  }
+}
+
+.chat-window {
+  background-color: white;
+  height: 100%;
+  padding: 1rem;
+  overflow: auto;
+}
+.chat-message {
+  display: flex;
+  margin-bottom: 0.5rem;
+}
+
+.participant-name {
+  display: flex;
+}
+
+.participant-name > span {
+  font-size: 1rem;
+  margin-right: 0.5rem;
+}
+
+.participant-name > img {
+  width: 1rem;
+  height: 1rem;
+}
+
+.participant-text {
+  padding-left: 1rem;
 }
 
 .bottom-panel {
@@ -75,9 +158,19 @@
   flex-direction: column;
 }
 
-.bottom-panel>.input-wrapper>input {
+.bottom-panel > .input-wrapper > input {
   padding: 0.4rem;
   height: 100%;
+}
+
+@media screen and (max-width: 840px) {
+  .participant-text > p {
+    font-size: 0.8rem;
+  }
+
+  .bottom-panel > .input-wrapper > input {
+    font-size: 0.8rem;
+  }
 }
 
 .input-wrapper {
@@ -104,25 +197,14 @@
   cursor: pointer;
 }
 
-.send-btn:hover,
-.go-btn:hover {
+@media screen and (max-width: 840px) {
+  .send-btn {
+    font-size: 0.8rem;
+  }
+}
+
+.send-btn:hover {
   background-color: green;
-}
-
-.channel {
-  width: 30% !important;
-  border-radius: 5px;
-  margin-right: 0.5rem;
-}
-
-.go-btn {
-  border-radius: 5px;
-  border: 1px solid transparent;
-  color: white;
-  background-color: darkblue;
-  cursor: pointer;
-  font-size: 1rem !important;
-  padding: 0.5rem;
 }
 
 .admin-img {
@@ -142,6 +224,6 @@
   color: white;
 }
 
-.admin-img:hover+.tooltip {
+.admin-img:hover + .tooltip {
   display: block;
 }
