--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -4,7 +4,7 @@
   color: white;
   display: flex;
   height: 5rem;
-  padding: 10px;
+  padding: 1rem;
   position: fixed;
 }
 
@@ -28,7 +28,6 @@
   list-style: none;
   width: 100%;
   height: 100%;
-  padding: 10px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -41,14 +40,11 @@
   font-size: 1.5rem;
 }
 
-@media screen and (max-width: 840px) {
-  .menu-item:nth-child(3) {
-    margin-right: 0;
-  }
-
-  .profile-shift {
-    left: -200% !important;
-  }
+.menu-item:nth-child(3) {
+  margin-right: 0;
+}
+.profile-shift {
+  left: -200% !important;
 }
 
 .menu-item:hover {
